tictactoe_bonus refactoring

--- a/RB110/lesson_3/tictactoe_messages.yml
+++ b/RB110/lesson_3/tictactoe_messages.yml
@@ -12,3 +12,6 @@ keep_playing: "Keep playing! The game is still going..."
 again: "=> Do you want to play again? Press 'Y' for yes. "
 bye: "Thank you for playing TIC TAC TOE. Goodbye!"
 layout: "Squares are numbered from top left (1) to bottom right (9)."
+win: "CONGRATS! You won the game!"
+loss: "TOO BAD! The computer won the game this time."
+delimiter: "------------------------------------------------"
